--- a/admin/views/auth/login.ejs
+++ b/admin/views/auth/login.ejs
@@ -14,9 +14,9 @@
 
         <form action="/auth/signup" method="POST" id="signup-form" style="<%= !signup ? 'display:none;' : '' %>">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-            <input type="text" id="firstname" class="fadeIn second" name="firstname" placeholder="First name" required />
-            <input type="text" id="lastname" class="fadeIn second" name="lastname" placeholder="Last name" required />
-            <input type="text" id="email" class="fadeIn third" name="email" placeholder="Email address" required />
+            <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email address" required />
+            <input type="text" id="name" class="fadeIn second" name="name" placeholder="Full name" required />
+            <input type="text" id="phone" class="fadeIn third" name="phone" placeholder="Phone" required />
             <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password"  required />
             <input type="submit" class="fadeIn fourth" value="Register" />
         </form>
